--- a/constant-values.html
+++ b/constant-values.html
@@ -926,6 +926,32 @@
 <ul class="blockList">
 <li class="blockList">
 <table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
+<caption><span>mitiv.microscopy.<a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></span><span class="tabEnd">&nbsp;</span></caption>
+<tr>
+<th class="colFirst" scope="col">Modifier and Type</th>
+<th scope="col">Constant Field</th>
+<th class="colLast" scope="col">Value</th>
+</tr>
+<tbody>
+<tr class="altColor">
+<td class="colFirst"><a name="mitiv.microscopy.MicroscopyModelPSF1D.DEUXPI">
+<!--   -->
+</a><code>protected&nbsp;static&nbsp;final&nbsp;double</code></td>
+<td><code><a href="mitiv/microscopy/MicroscopyModelPSF1D.html#DEUXPI">DEUXPI</a></code></td>
+<td class="colLast"><code>6.283185307179586</code></td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a name="mitiv.microscopy.MicroscopyModelPSF1D.NORMALIZED">
+<!--   -->
+</a><code>protected&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/microscopy/MicroscopyModelPSF1D.html#NORMALIZED">NORMALIZED</a></code></td>
+<td class="colLast"><code>1</code></td>
+</tr>
+</tbody>
+</table>
+</li>
+<li class="blockList">
+<table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
 <caption><span>mitiv.microscopy.<a href="mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
 <th class="colFirst" scope="col">Modifier and Type</th>
@@ -952,32 +978,6 @@
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/microscopy/PSF_Estimation.html#DEFOCUS">DEFOCUS</a></code></td>
-<td class="colLast"><code>1</code></td>
-</tr>
-</tbody>
-</table>
-</li>
-<li class="blockList">
-<table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
-<caption><span>mitiv.microscopy.<a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a></span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Modifier and Type</th>
-<th scope="col">Constant Field</th>
-<th class="colLast" scope="col">Value</th>
-</tr>
-<tbody>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.microscopy.WideFieldModel.DEUXPI">
-<!--   -->
-</a><code>protected&nbsp;static&nbsp;final&nbsp;double</code></td>
-<td><code><a href="mitiv/microscopy/WideFieldModel.html#DEUXPI">DEUXPI</a></code></td>
-<td class="colLast"><code>6.283185307179586</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.microscopy.WideFieldModel.NORMALIZED">
-<!--   -->
-</a><code>protected&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/microscopy/WideFieldModel.html#NORMALIZED">NORMALIZED</a></code></td>
 <td class="colLast"><code>1</code></td>
 </tr>
 </tbody>
