--- a/mitiv/deconv/impl/WeightedConvolutionDouble3D.html
+++ b/mitiv/deconv/impl/WeightedConvolutionDouble3D.html
@@ -117,7 +117,7 @@ extends <a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble.html" titl
  one of the factory methods of the parent class
  <code>WeightedConvolutionOperator</code>.<code>build()</code>.  Have a look at the
  documentation of <code>WeightedConvolutionOperator</code> for a description
- of what exactly does this kind of operator.
+ of what exaclty does this kind of operator.
  </p></div>
 <dl><dt><span class="strong">Author:</span></dt>
   <dd>Éric Thiébaut</dd>
