--- a/mitiv/microscopy/package-summary.html
+++ b/mitiv/microscopy/package-summary.html
@@ -74,17 +74,17 @@
 </tr>
 <tbody>
 <tr class="altColor">
+<td class="colFirst"><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></td>
+<td class="colLast">
+<div class="block">Compute a 3D point spread function of a wild field fluorescente microscope (WFFM)</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="rowColor">
-<td class="colFirst"><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a></td>
-<td class="colLast">
-<div class="block">Compute a 3D point spread function of a wild field fluorescence microscope (WFFM)</div>
-</td>
-</tr>
 <tr class="altColor">
-<td class="colFirst"><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy">Zernike</a></td>
+<td class="colFirst"><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy">Zernike1D</a></td>
 <td class="colLast">
 <div class="block">Compute Zernike polynomials 
 
