--- a/mitiv/microscopy/PSF_Estimation.html
+++ b/mitiv/microscopy/PSF_Estimation.html
@@ -34,8 +34,8 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li>PREV CLASS</li>
-<li><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -221,7 +221,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code><a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a></code></td>
+<td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getPsf()">getPsf</a></strong>()</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
@@ -235,40 +235,40 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><code>java.lang.String</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getSynchronizedParameterName(int)">getSynchronizedParameterName</a></strong>(int&nbsp;i)</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><code><a href="../../mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getSynchronizer()">getSynchronizer</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb">ReconstructionViewer</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getViewer()">getViewer</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setAbsoluteTolerance(double)">setAbsoluteTolerance</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setData(mitiv.array.DoubleArray)">setData</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;data)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setDebugMode(boolean)">setDebugMode</a></strong>(boolean&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setLimitedMemorySize(int)">setLimitedMemorySize</a></strong>(int&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setLowerBound(double)">setLowerBound</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
-<td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setMaximumIterations(int)">setMaximumIterations</a></strong>(int&nbsp;value)</code>&nbsp;</td>
-</tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setObj(mitiv.array.ShapedArray)">setObj</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setMaximumIterations(int)">setMaximumIterations</a></strong>(int&nbsp;value)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
@@ -276,7 +276,15 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.WideFieldModel)">setPupil</a></strong>(<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a>&nbsp;pupil)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">setPupil</a></strong>(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRegularizationThreshold(double)">setRegularizationThreshold</a></strong>(double&nbsp;value)</code>&nbsp;</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRegularizationWeight(double)">setRegularizationWeight</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
@@ -410,6 +418,15 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;void&nbsp;enablePositivity(java.lang.Boolean&nbsp;positivity)</pre>
 </li>
 </ul>
+<a name="getSynchronizedParameterName(int)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>getSynchronizedParameterName</h4>
+<pre>public&nbsp;java.lang.String&nbsp;getSynchronizedParameterName(int&nbsp;i)</pre>
+</li>
+</ul>
 <a name="fitPSF(mitiv.linalg.shaped.DoubleShapedVector, int)">
 <!--   -->
 </a>
@@ -445,6 +462,24 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <li class="blockList">
 <h4>setLimitedMemorySize</h4>
 <pre>public&nbsp;void&nbsp;setLimitedMemorySize(int&nbsp;value)</pre>
+</li>
+</ul>
+<a name="setRegularizationWeight(double)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>setRegularizationWeight</h4>
+<pre>public&nbsp;void&nbsp;setRegularizationWeight(double&nbsp;value)</pre>
+</li>
+</ul>
+<a name="setRegularizationThreshold(double)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>setRegularizationThreshold</h4>
+<pre>public&nbsp;void&nbsp;setRegularizationThreshold(double&nbsp;value)</pre>
 </li>
 </ul>
 <a name="setAbsoluteTolerance(double)">
@@ -550,13 +585,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;<a href="../../mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a>&nbsp;getSynchronizer()</pre>
 </li>
 </ul>
-<a name="setPupil(mitiv.microscopy.WideFieldModel)">
+<a name="setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>setPupil</h4>
-<pre>public&nbsp;void&nbsp;setPupil(<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a>&nbsp;pupil)</pre>
+<pre>public&nbsp;void&nbsp;setPupil(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</pre>
 </li>
 </ul>
 <a name="getData()">
@@ -583,7 +618,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <ul class="blockList">
 <li class="blockList">
 <h4>getPsf</h4>
-<pre>public&nbsp;<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;getPsf()</pre>
+<pre>public&nbsp;<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;getPsf()</pre>
 </li>
 </ul>
 <a name="setPsf(mitiv.array.DoubleArray)">
@@ -697,7 +732,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <a name="getGradientNormInf()">
 <!--   -->
 </a>
-<ul class="blockList">
+<ul class="blockListLast">
 <li class="blockList">
 <h4>getGradientNormInf</h4>
 <pre>public&nbsp;double&nbsp;getGradientNormInf()</pre>
@@ -707,15 +742,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../mitiv/invpb/ReconstructionJob.html#getGradientNormInf()">getGradientNormInf</a></code>&nbsp;in interface&nbsp;<code><a href="../../mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb">ReconstructionJob</a></code></dd>
 </dl>
-</li>
-</ul>
-<a name="setObj(mitiv.array.ShapedArray)">
-<!--   -->
-</a>
-<ul class="blockListLast">
-<li class="blockList">
-<h4>setObj</h4>
-<pre>public&nbsp;void&nbsp;setObj(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</pre>
 </li>
 </ul>
 </li>
@@ -743,8 +769,8 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </div>
 <div class="subNav">
 <ul class="navList">
-<li>PREV CLASS</li>
-<li><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
