--- a/mitiv/microscopy/package-tree.html
+++ b/mitiv/microscopy/package-tree.html
@@ -72,9 +72,9 @@
 <ul>
 <li type="circle">java.lang.Object
 <ul>
+<li type="circle">mitiv.microscopy.<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">MicroscopyModelPSF1D</span></a></li>
 <li type="circle">mitiv.microscopy.<a href="../../mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy"><span class="strong">PSF_Estimation</span></a> (implements mitiv.invpb.<a href="../../mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb">ReconstructionJob</a>)</li>
-<li type="circle">mitiv.microscopy.<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">WideFieldModel</span></a></li>
-<li type="circle">mitiv.microscopy.<a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">Zernike</span></a></li>
+<li type="circle">mitiv.microscopy.<a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">Zernike1D</span></a></li>
 </ul>
 </li>
 </ul>
